Fix blog list overflow issue where long titles made it scroll sideways.
Fix activity view to scroll by css, not by ExtJS.

Allow the About view to scroll if the view is longer than the window is tall.

git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@24293 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_forums.scss
+++ b/src/main/resources/scss/_forums.scss
@@ -611,6 +611,10 @@
 		& > .list-view > .body:not(.old) {
 			position: absolute;
 			top: 0; left: 0; right: 0; bottom: 0;
+			overflow: {
+				x: hidden;
+				y: auto; //scroll;
+			}
 		}
 
 		.post-view {
